--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <div id="row4">
             
         </div>
+        <div id="row5">
+         <!-- <h2>New Arrivals</h2> -->
+
+        </div>
     </div>
 </body>
 </html>
